--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'assets/main.css';
+body{background-color: #f1f1f1;}
